--- a/menu.html
+++ b/menu.html
@@ -78,11 +78,11 @@
 <body>
 
     <section id="menu">
-        <h2>МЕНЮ</h2>
+        <h2 data-i18n="menu">МЕНЮ</h2>
         <section id="bevarages">
             <div class="type">
                 <a href="drinks.html">
-                    <h3>Напитки</h3>
+                    <h3 data-i18n="drinks">Напитки</h3>
                 </a>
             </div>
         </section>
@@ -90,12 +90,13 @@
         <section id="dishes">
             <div class="type">
                 <a href="dishes.html">
-                    <h3>Ястия</h3>
+                    <h3 data-i18n="dishes">Ястия</h3>
                 </a>
             </div>
         </section>
     </section>
-    
+     <script src="translations.js"></script>
+ <script src="lang.js"></script>
 
 </body>
 
