--- a/index.html
+++ b/index.html
@@ -12,28 +12,35 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Механа "Чевермето"</h1>
+            <nav>
+            <div class="language-switcher">
+  <button onclick="setLanguage('bg')">🇧🇬 BG</button>
+  <button onclick="setLanguage('en')">🇬🇧 EN</button>
+</div>
+            </nav>
+
+            <h1 data-i18n="title">Механа "Чевермето"</h1>
         </header>
         <main>
             <nav>
-                <a href="menu.html">📜 Меню</a>
+                <a href="menu.html" data-i18n="menu">📜 Меню</a>
             </nav>
             <a href="gallery-page.html">
-                <h2>Галерия</h2>
+                <h2 data-i18n="gallery">Галерия</h2>
             </a>
 
-            <div class="about">
-                <h3>Механа „Чевермето“ – Враца</h3>
-                <h4>Традиции, вкус и настроение от 1997 година</h4>
-                <p>Основана през 1997 година, механа „Чевермето“ започва като малко и уютно заведение, което с годините
+            <div class="about" data-i18n="about">
+                <h3 data-i18n="about-title">Механа „Чевермето“ – Враца</h3>
+                <h4 data-i18n="established">Традиции, вкус и настроение от 1997 година</h4>
+                <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно заведение, което с годините
                     се разраства и превръща в добре познато място за срещи, празници и вкусна българска кухня.
                     Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява с
                     живописен шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
                 </p>
-                <p>Менюто ни предлага разнообразие от традиционни български ястия, приготвени с внимание към вкуса и
+                <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с внимание към вкуса и
                     качеството. Залите ни съчетават битов стил с уют и комфорт, а през топлите месеци градината
                     осигурява прохлада и спокойствие.</p>
-                <p>🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери – с народна музика,
+                <p data-i18n="history-3">🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери – с народна музика,
                     танци и хора до късно! Без жива музика, но с много настроение и възможност да се потанцува с
                     приятели и близки.</p>
             </div>
@@ -42,7 +49,7 @@
         </main>
 
         <footer>
-            <address>
+            <address data-i18n="address">
                 📍 Адрес: гр. Враца, ул. Васил Кънчов 26<br>
                 📞 Резервации и информация: <a href="tel:+35992660694">+35992 66 06 94</a>
             </address>
@@ -55,6 +62,9 @@
             </div>
         </footer>
     </div>
+     <script src="translations.js"></script>
+    <script src="lang.js"></script>
+   
 
 </body>
 
