--- a/dishes.html
+++ b/dishes.html
@@ -230,113 +230,113 @@
             </div>
 
             <div class="type">
-                <h3>СТУДЕНИ ПРЕДЯСТИЯ - 50 г</h3>
+                <h3 data-i18n="cold-appetizers">СТУДЕНИ ПРЕДЯСТИЯ - 50 г</h3>
             </div>
             <div class="menu-item">
-                <h4>Сирене</h4>
+                <h4 data-i18n="sirene">Сирене</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="2.80">2.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Кашкавал</h4>
+                <h4 data-i18n="kashkaval">Кашкавал</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="3.00">3.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Шпек салам</h4>
+                <h4 data-i18n="shpek">Шпек салам</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="3.00">3.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Пастърма</h4>
+                <h4 data-i18n="pastarma">Пастърма</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="4.80">4.80 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Филе Елена</h4>
+                <h4 data-i18n="fileElena">Филе Елена</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="4.40">4.40 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Луканка</h4>
+                <h4 data-i18n="lukanka">Луканка</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="4.00">4.00 лв.</p>
             </div>
 
             <div class="type">
-                <h3>РАЗЯДКИ</h3>
+                <h3 data-i18n="spreads">РАЗЯДКИ</h3>
             </div>
             <div class="menu-item">
-                <h4>Разядката на Ванчо 300 г</h4>
-                <div class="menu-item-description">тиквички, домат, сирене</div>
+                <h4 data-i18n="vancho">Разядката на Ванчо 300 г</h4>
+                <div class="menu-item-description" data-i18n="vancho-desc">тиквички, домат, сирене</div>
                 <p class="price" data-price="10.30">10.30 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Родопски катък 200 г</h4>
-                <div class="menu-item-description">майонеза, сирене, кисели краставички, печена чушка</div>
+                <h4 data-i18n="katak">Родопски катък 200 г</h4>
+                <div class="menu-item-description" data-i18n="katak-desc">майонеза, сирене, кисели краставички, печена чушка</div>
                 <p class="price" data-price="8.00">8.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Лютика със сирене и яйце 250 г</h4>
+                <h4 data-i18n="lyutika">Лютика със сирене и яйце 250 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="8.00">8.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Тиквички с кисело мляко 300 г</h4>
+                <h4 data-i18n="tikvichki">Тиквички с кисело мляко 300 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="6.90">6.90 лв.</p>
             </div>
 
             <div class="type">
-                <h3>ТОПЛИ ПРЕДЯСТИЯ</h3>
+                <h3 data-i18n="hot-appetizers">ТОПЛИ ПРЕДЯСТИЯ</h3>
             </div>
             <div class="menu-item">
-                <h4>Кралски скариди 170 г</h4>
+                <h4 data-i18n="shrimp">Кралски скариди 170 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="23.00">23.00 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Сирене пане хапки 220 г</h4>
+                <h4 data-i18n="friedCheeseBites">Сирене пане хапки 220 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="8.20">8.20 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Сирене под капак 150 г</h4>
+                <h4 data-i18n="bakedCheese">Сирене под капак 150 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="7.50">7.50 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Кашкавал пане 220 г</h4>
+                <h4 data-i18n="kashkavalPane">Кашкавал пане 220 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="7.50">7.50 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Кашкавал пане хапки 120 г</h4>
+                <h4 data-i18n="kashkavalBites">Кашкавал пане хапки 120 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="8.80">8.80 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Топено сирене пане 120 г</h4>
+                <h4 data-i18n="meltedCheese">Топено сирене пане 120 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="8.80">8.80 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Пилешки сърца в масло 220 г </h4>
+                <h4 data-i18n="chickenHearts">Пилешки сърца в масло 220 г </h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="8.90">8.90 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Гъби в масло 150 г </h4>
+                <h4 data-i18n="mushrooms">Гъби в масло 150 г </h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="6.60">6.60 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Чушка бюрек 1 бр.</h4>
+                <h4 data-i18n="pepperBurek">Чушка бюрек 1 бр.</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="6.20">6.20 лв.</p>
             </div>
             <div class="menu-item">
-                <h4>Език пане/в масло 170 г</h4>
+                <h4 data-i18n="tongue">Език пане/в масло 170 г</h4>
                 <div class="menu-item-description"></div>
                 <p class="price" data-price="15.90">15.90 лв.</p>
             </div>
