--- a/menu.html
+++ b/menu.html
@@ -76,6 +76,14 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="language-switcher">
+                <button onclick="setLanguage('bg')">🇧🇬 BG</button>
+                <button onclick="setLanguage('en')">🇬🇧 EN</button>
+            </div>
+        </nav>
+    </header>
 
     <section id="menu">
         <h2 data-i18n="menu">МЕНЮ</h2>
