some changes and addings

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="bg">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,10 +13,16 @@
     <div class="wrapper">
         <header>
             <nav>
-            <div class="language-switcher">
-  <button onclick="setLanguage('bg')">🇧🇬 BG</button>
-  <button onclick="setLanguage('en')">🇬🇧 EN</button>
-</div>
+                <div class="language-switcher">
+                    <button onclick="setLanguage('bg')">
+                        <img src="https://flagcdn.com/w40/bg.png" alt="BG Flag" />
+                        BG
+                    </button>
+                    <button onclick="setLanguage('en')">
+                        <img src="https://flagcdn.com/w40/gb.png" alt="GB Flag" />
+                        EN
+                    </button>
+                </div>
             </nav>
 
             <h1 data-i18n="title">Механа "Чевермето"</h1>
@@ -32,15 +38,18 @@
             <div class="about" data-i18n="about">
                 <h3 data-i18n="about-title">Механа „Чевермето“ – Враца</h3>
                 <h4 data-i18n="established">Традиции, вкус и настроение от 1997 година</h4>
-                <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно заведение, което с годините
+                <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно
+                    заведение, което с годините
                     се разраства и превръща в добре познато място за срещи, празници и вкусна българска кухня.
                     Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява с
                     живописен шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
                 </p>
-                <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с внимание към вкуса и
+                <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с
+                    внимание към вкуса и
                     качеството. Залите ни съчетават битов стил с уют и комфорт, а през топлите месеци градината
                     осигурява прохлада и спокойствие.</p>
-                <p data-i18n="history-3">🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери – с народна музика,
+                <p data-i18n="history-3">🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери
+                    – с народна музика,
                     танци и хора до късно! Без жива музика, но с много настроение и възможност да се потанцува с
                     приятели и близки.</p>
             </div>
@@ -53,6 +62,10 @@
                 📍 Адрес: гр. Враца, ул. Васил Кънчов 26<br>
                 📞 Резервации и информация: <a href="tel:+35992660694">+35992 66 06 94</a>
             </address>
+            <div class="social">
+                <p data-i18n="social">Социални мрежи:</p>
+                <a href="https://www.facebook.com/cheverme/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" width="24" height="24"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 440 146.7 540.8 258.2 568.5L258.2 398.2L205.4 398.2L205.4 320L258.2 320L258.2 286.3C258.2 199.2 297.6 158.8 383.2 158.8C399.4 158.8 427.4 162 438.9 165.2L438.9 236C432.9 235.4 422.4 235 409.3 235C367.3 235 351.1 250.9 351.1 292.2L351.1 320L434.7 320L420.3 398.2L351 398.2L351 574.1C477.8 558.8 576 450.9 576 320z"/></svg></a>
+            </div>
             <div class="map-container">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2891.983002385495!2d23.54731827655343!3d43.21307827112747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40ab18e572bb6797%3A0xc2ff2bc70d0a5570!2z0KfQtdGA0LXQv9C10LrRgiDQmtCw0YDQtdGB0YLRgNC-0LLQsCAi0KHQu9Cw0YDQvtGA0LDQvdC40Y8i!5e0!3m2!1sbg!2sbg!4v1719065095560!5m2!1sbg!2sbg"
@@ -62,9 +75,9 @@
             </div>
         </footer>
     </div>
-     <script src="translations.js"></script>
+    <script src="translations.js"></script>
     <script src="lang.js"></script>
-   
+
 
 </body>
 
