--- a/menu.html
+++ b/menu.html
@@ -52,6 +52,29 @@
             cursor: pointer;
         }
 
+        .language-switcher {
+            margin-top: 1em;
+        }
+
+        .language-switcher {
+            display: flex;
+            justify-content: center;
+        }
+
+        .language-switcher button {
+            padding: 0.5em 1em;
+            margin: 0 0.3em;
+            background-color: #fff3e0;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .language-switcher button:hover {
+            background-color: #e4d7c3;
+        }
+
 
         @media (max-width: 480px) {
             #menu {
@@ -71,6 +94,16 @@
                 padding: 0.75rem;
                 text-align: center;
             }
+
+            .language-switcher {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .language-switcher button {
+                width: 100px;
+                justify-content: center;
+            }
         }
     </style>
 </head>
@@ -79,8 +112,14 @@
     <header>
         <nav>
             <div class="language-switcher">
-                <button onclick="setLanguage('bg')">🇧🇬 BG</button>
-                <button onclick="setLanguage('en')">🇬🇧 EN</button>
+                <button onclick="setLanguage('bg')">
+                    <img src="https://flagcdn.com/w40/bg.png" alt="BG Flag" />
+                    BG
+                </button>
+                <button onclick="setLanguage('en')">
+                    <img src="https://flagcdn.com/w40/gb.png" alt="GB Flag" />
+                    EN
+                </button>
             </div>
         </nav>
     </header>
