changes to translatoins.js and script.js - rounding bgn to eu

--- a/dishes.html
+++ b/dishes.html
@@ -134,6 +134,13 @@
             align-self: flex-start;
         }
 
+        button {
+            font-weight: bold;
+            background-color: #d8cdbf;
+            border-radius: 5px;
+            border-color: #8B0000;
+            
+        }
         /* Responsive behavior */
         @media (max-width: 600px) {
             .menu-item {
