--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mehana Chevermeto</title>
     <link rel="stylesheet" href="style.css">
-  
+
 </head>
 
 <body>
@@ -27,21 +27,20 @@
 
         </header>
         <main>
-            <div class="left-side">
-            <div class="logo-image">
-                <img src="gallery/mehana_chevermeto.jpg" alt="">
-            </div>
-            </div>
-            <div class="right-side">
-            <nav>
-                <a href="menu.html" data-i18n="menu">📜 Меню</a>
-            </nav>
-            <a href="gallery-page.html">
-                <h2 data-i18n="gallery">Галерия</h2>
-            </a>
-            <a href="about.html">
-                <h2 data-i18n="about">За нас</h2>
-            </a>
+            <div class="main-split">
+                <div class="main-left">
+                    <img src="gallery/mehana_chevermeto.jpg" alt="Garden view of Mehana Chevermeto">
+                </div>
+                <div class="main-right">
+                    <nav aria-label="Primary">
+                        <ul class="primary-links">
+                            <li><a href="menu.html" data-i18n="menu">📜 Меню</a></li>
+                            <li><a href="gallery-page.html" data-i18n="gallery">Галерия</a></li>
+                            <li><a href="about.html" data-i18n="about">За нас</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
             </div>
 
         </main>
@@ -53,7 +52,12 @@
             </address>
             <div class="social">
                 <p data-i18n="social">Социални мрежи:</p>
-                <a href="https://www.facebook.com/cheverme/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" width="24" height="24"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 440 146.7 540.8 258.2 568.5L258.2 398.2L205.4 398.2L205.4 320L258.2 320L258.2 286.3C258.2 199.2 297.6 158.8 383.2 158.8C399.4 158.8 427.4 162 438.9 165.2L438.9 236C432.9 235.4 422.4 235 409.3 235C367.3 235 351.1 250.9 351.1 292.2L351.1 320L434.7 320L420.3 398.2L351 398.2L351 574.1C477.8 558.8 576 450.9 576 320z"/></svg></a>
+                <a href="https://www.facebook.com/cheverme/"><svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 640 640" width="24"
+                        height="24"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                        <path
+                            d="M576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 440 146.7 540.8 258.2 568.5L258.2 398.2L205.4 398.2L205.4 320L258.2 320L258.2 286.3C258.2 199.2 297.6 158.8 383.2 158.8C399.4 158.8 427.4 162 438.9 165.2L438.9 236C432.9 235.4 422.4 235 409.3 235C367.3 235 351.1 250.9 351.1 292.2L351.1 320L434.7 320L420.3 398.2L351 398.2L351 574.1C477.8 558.8 576 450.9 576 320z" />
+                    </svg></a>
             </div>
             <div class="map-container">
                 <iframe
