change style css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main>
             <div class="main-split">
                 <div class="main-left">
-                    <img src="gallery/mehana_chevermeto.jpg" alt="Garden view of Mehana Chevermeto">
+                    <img src="gallery/mehana_chevermeto_cropped.png" alt="Logo">
                 </div>
                 <div class="main-right">
                     <nav aria-label="Primary">
