--- a/about.html
+++ b/about.html
@@ -1,32 +1,77 @@
 <style>
-    body {
-        background-color: antiquewhite;
-    }
-    .about {
+    @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+
+   @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+
+body {
+    margin: 0;
+    background-color: antiquewhite;
     font-family: 'Lora', serif;
-    padding: 20px 50px;
 }
+
+/* Content container */
+.about {
+    width: min(92vw, 65ch);
+    margin: 24px auto;
+    padding: clamp(12px, 2.5vw, 24px);
+    text-align: center;
+}
+
+.about-wrapper {
+    min-height: 100vh;           /* fill viewport height */
+    display: flex;               /* simple vertical centering */
+    align-items: center;         /* vertical center */
+    justify-content: center;     /* optional: horizontal center */
+    padding: clamp(16px, 6vh, 48px) 0; /* breathing room on small screens */
+}
+
+/* Fluid headings */
+h1 {
+    font-size: clamp(1.6rem, 3.2vw + 1rem, 2.2rem);
+    color: rgb(80, 54, 6);
+    margin: 0 0 16px;
+}
+
+h2 {
+    font-size: clamp(1.2rem, 2.4vw + 0.8rem, 1.8rem);
+    color: rgb(13, 70, 13);
+    margin: 0 0 20px;
+}
+
+/* Readable paragraphs */
 .about p {
-    font-size: 1.4rem;
-    line-height: 25px;
+    font-size: clamp(1rem, 1.2vw + 0.9rem, 1.25rem);
+    line-height: 1.7;
+    color: rgb(58, 39, 4);
+    margin: 0 auto 14px;
+   
+    max-width: 65ch;
+    hyphens: auto;
+}
+
+/* Slight tweaks for very small phones */
+@media (max-width: 480px) {
+    .about { margin: 16px auto; }
 }
 </style>
 
-<div class="about" data-i18n="about">
-    <h3 data-i18n="about-title">Механа „Чевермето“ – Враца</h3>
-    <h4 data-i18n="established">Традиции, вкус и настроение от 1997 година</h4>
-    <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно
-        заведение, което с годините
-        се разраства и превръща в добре познато място за срещи, празници и вкусна българска кухня.
-        Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява с
-        живописен шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
-    </p>
-    <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с
-        внимание към вкуса и
-        качеството. Залите ни съчетават битов стил с уют и комфорт, а през топлите месеци градината
-        осигурява прохлада и спокойствие.</p>
-    <p data-i18n="history-3">🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери
-        – с народна музика,
-        танци и хора до късно! Без жива музика, но с много настроение и възможност да се потанцува с
-        приятели и близки.</p>
+<div class="about-wrapper">
+    <div class="about" data-i18n="about">
+        <h1 data-i18n="about-title">Механа „Чевермето“ – Враца</h1>
+        <h2 data-i18n="established">Традиции, вкус и настроение от 1997 година</h2>
+        <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно
+            заведение, което с годините
+            се разраства и превръща в добре познато място за срещи, празници и вкусна българска кухня.
+            Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява с
+            живописен шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
+        </p>
+        <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с
+            внимание към вкуса и
+            качеството. Залите ни съчетават битов стил с уют и комфорт, а през топлите месеци градината
+            осигурява прохлада и спокойствие.</p>
+        <p data-i18n="history-3">🎧 В петък и събота механа „Чевермето“ се превръща в сцена на весели DJ вечери
+            – с народна музика,
+            танци и хора до късно! Без жива музика, но с много настроение и възможност да се потанцува с
+            приятели и близки.</p>
+    </div>
 </div>
