--- a/dishes.html
+++ b/dishes.html
@@ -1073,29 +1073,23 @@
                 <div class="menu-item">
                     <h4 data-i18n="fresh fries with cheese">Пресни пържени картофи със сирене 200 г</h4>
                     <div class="menu-item-description"></div>
-                    <p class="price" data-price=""></p>
+                    <p class="price" data-price="6.00">6.00 лв.</p>
                 </div>
                 <div class="menu-item">
                     <h4 data-i18n="boiled potatoes with onion">Варени картофи 150 г |(с лук) 120 г</h4>
                     <div class="menu-item-description"></div>
-                    <p class="price" data-price=""></p>
+                    <p class="price" data-price="4.30">4.30 лв.</p>
                 </div>
                 <div class="menu-item">
                     <h4 data-i18n="sautéed potatoes">Картофи соте 150 г</h4>
                     <div class="menu-item-description"></div>
-                    <p class="price" data-price=""></p>
+                    <p class="price" data-price="5.00">5.00 лв.</p>
                 </div>
                 <div class="menu-item">
                     <h4 data-i18n="grilled vegetables">Зеленчуци на скара 180 г</h4>
                     <div class="menu-item-description"></div>
-                    <p class="price" data-price=""></p>
+                    <p class="price" data-price="8.50">8.50 лв.</p>
                 </div>
-                <div class="menu-item">
-                    <h4 data-i18n="steamed vegetables">Задушени зеленчуци 180 г</h4>
-                    <div class="menu-item-description"></div>
-                    <p class="price" data-price=""></p>
-                </div>
-
 
                 <div class="type">
                     <h3 data-i18n="sauces">СОСОВЕ - 60 г</h3>
