--- a/drinks.html
+++ b/drinks.html
@@ -411,27 +411,22 @@
 
                 <div class="menu-item">
                     <h4 data-i18n="coffee">Кафе 60 г</h4>
-                    <p class="price" data-price="" data-i18n="price coffee"></p>
-                </div>
-
-                <div class="menu-item">
-                    <h4 data-i18n="3 in 1">3 в 1 60 г</h4>
-                    <p class="price" data-price="" data-i18n="price 3 in 1"></p>
+                    <p class="price" data-price="2.20" data-i18n="price 2.2">2.20 лв.</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="tea">Чай 60 г</h4>
-                    <p class="price" data-price="" data-i18n="price tea"></p>
+                    <p class="price" data-price="2.30" data-i18n="price 2.3">2.30 лв.</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="cream">Сметана</h4>
-                    <p class="price" data-price="" data-i18n="price cream"></p>
+                    <p class="price" data-price="0.35" data-i18n="price 0.35">0.35 лв.</p>
                 </div>
 
                 <div class="menu-item">
                     <h4 data-i18n="honey">Мед</h4>
-                    <p class="price" data-price="" data-i18n="price honey"></p>
+                    <p class="price" data-price="0.40" data-i18n="price 0.40">0.40 лв</p>
                 </div>
             </section>
 
@@ -577,10 +572,6 @@
 
             <div class="type">
                 <h3 data-i18n="anise drinks">Анасонови напитки</h3>
-            </div>
-            <div class="menu-item">
-                <h4 data-i18n="karnobatska mastika">Карнобатска мастика 50 мл</h4>
-                <p class="price" data-price="" data-i18n=""></p>
             </div>
             <div class="menu-item">
                 <h4 data-i18n="ouzo plomari">Узо Пломари 50 мл</h4>
