changes in about section

--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@ h2 {
         <p data-i18n="history-1">Основана през 1997 година, механа „Чевермето“ започва като малко и уютно
             заведение, което с годините
             се разраства и превръща в добре познато място за срещи, празници и вкусна българска кухня.
-            Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява с
-            живописен шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
+            Постепенно са изграждани нови зали, а градината е променяна и обогатена – днес тя впечатлява със своята зеленина,
+            шадраван и обитателите му – истински костенурки, които са любима атракция за нашите гости.
         </p>
         <p data-i18n="history-2">Менюто ни предлага разнообразие от традиционни български ястия, приготвени с
             внимание към вкуса и
