--- a/menu.html
+++ b/menu.html
@@ -141,6 +141,14 @@
                 </a>
             </div>
         </section>
+
+                <section id="banquet">
+            <div class="type">
+                <a href="banquet-menus.html">
+                    <h3 data-i18n="banquet">Банкетни менюта</h3>
+                </a>
+            </div>
+        </section>
     </section>
 
     <script src="translations.js"></script>
