--- a/banquet-menus.html
+++ b/banquet-menus.html
@@ -13,18 +13,18 @@
     .gallery {
       background-color: rgb(204, 204, 176);
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
       gap: 16px;
       padding: 20px;
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
       box-sizing: border-box;
     }
 
     .gallery img {
       width: 100%;              /* Responsive width */
-      max-width: 300px;         /* Limit size on large screens */
-      height: 200px;
+      height: auto;
+      max-width: 100%;
       object-fit: cover;
       border-radius: 8px;
       cursor: pointer;
@@ -34,18 +34,74 @@
       margin: 0 auto;           /* Center images inside grid cells */
     }
 
-    .gallery img:hover {
+   .gallery img:hover {
       transform: scale(1.03);
     }
 
+    .lightbox {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.7);
+      backdrop-filter: blur(8px);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .lightbox.active {
+      display: flex;
+    }
+
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+    }
+
+    .lightbox .controls {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      color: white;
+      font-size: 48px;
+      user-select: none;
+      padding: 0 30px;
+    }
+
+    .lightbox .close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 40px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .lightbox .nav {
+      cursor: pointer;
+    }
+
+    /* Responsive tweaks for smaller screens */
     @media (max-width: 600px) {
       .gallery {
         padding: 10px;
         gap: 10px;
       }
 
-      .gallery img {
-        height: 150px;
+      .lightbox .controls {
+        font-size: 36px;
+        padding: 0 15px;
+      }
+
+      .lightbox .close {
+        font-size: 30px;
+        top: 10px;
+        right: 20px;
       }
     }
     </style>
@@ -57,6 +113,55 @@
         <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 3.jpg" alt="">
         <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 4.jpg" alt="">
     </div>
+
+      <div class="lightbox" id="lightbox">
+    <span class="close" onclick="closeLightbox()">&times;</span>
+    <div class="controls">
+      <span class="nav" onclick="prevImage()">&#10094;</span>
+      <span class="nav" onclick="nextImage()">&#10095;</span>
+    </div>
+    <img id="lightbox-img" src="" alt="">
+  </div>
+
+  <script>
+    const images = Array.from(document.querySelectorAll('.gallery img'));
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    let currentIndex = 0;
+
+    images.forEach((img, index) => {
+      img.addEventListener('click', () => {
+        currentIndex = index;
+        openLightbox();
+      });
+    });
+
+    function openLightbox() {
+      lightboxImg.src = images[currentIndex].src;
+      lightbox.classList.add('active');
+    }
+
+    function closeLightbox() {
+      lightbox.classList.remove('active');
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      lightboxImg.src = images[currentIndex].src;
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      lightboxImg.src = images[currentIndex].src;
+    }
+
+    // Close on ESC or arrow keys
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeLightbox();
+      if (e.key === 'ArrowRight') nextImage();
+      if (e.key === 'ArrowLeft') prevImage();
+    });
+  </script>
     
 </body>
 </html>
