--- a/dishes.html
+++ b/dishes.html
@@ -584,7 +584,7 @@
                 </div>
 
                 <div class="type">
-                    <h3>СУПИ</h3>
+                    <h3 data-i18n="soups">СУПИ</h3>
                 </div>
                 <div class="menu-item">
                     <h4 data-i18n="tripe">Шкембе 300 г</h4>
