new banquet menus

--- a/banquet-menus.html
+++ b/banquet-menus.html
@@ -108,10 +108,10 @@
 </head>
 <body>
     <div class="gallery" id="gallery">
-        <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 1.jpg" alt="">
-        <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 2.jpg" alt="">
-        <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 3.jpg" alt="">
-        <img src="gallery/banquet/Beige Simple Minimalist Wedding Menu 4.jpg" alt="">
+        <img src="gallery/banquet/menu-1.jpg" alt="">
+        <img src="gallery/banquet/menu-2.jpg" alt="">
+        <img src="gallery/banquet/menu-3.jpg" alt="">
+        <img src="gallery/banquet/menu-4.jpg" alt="">
     </div>
 
       <div class="lightbox" id="lightbox">
