add pics to gallery

--- a/gallery-page.html
+++ b/gallery-page.html
@@ -118,6 +118,10 @@
     <img src="gallery/кукла.jpg" alt="">
     <img src="gallery/градина.jpeg" alt="">
     <img src="gallery/маса.webp" alt="">
+    <img src="gallery/синия1.jpg" alt="">
+    <img src="gallery/синия2.jpg" alt="">
+    <img src="gallery/синия3.jpg" alt="">
+    <img src="gallery/синия4.jpg" alt="">
     <img src="gallery/скара1.jpg" alt="">
     <img src="gallery/скара2.jpg" alt="">
     <img src="gallery/скара3.jpg" alt="">
