--- a/gallery-page.html
+++ b/gallery-page.html
@@ -115,6 +115,8 @@
   <div class="gallery" id="gallery">
     <img src="gallery/надпис.jpg" alt="">
     <img src="gallery/надпис-печка.webp" alt="">
+    <img src="gallery/blackWhiteGarden (1).jpg" alt="">
+    <img src="gallery/fairplace.jpg" alt="">
     <img src="gallery/кукла.jpg" alt="">
     <img src="gallery/градина.jpeg" alt="">
     <img src="gallery/маса.webp" alt="">
