--- a/gallery-page.html
+++ b/gallery-page.html
@@ -116,6 +116,7 @@
     <img src="gallery/надпис.jpg" alt="">
     <img src="gallery/надпис-печка.webp" alt="">
     <img src="gallery/blackWhiteGarden (1).jpg" alt="">
+    <img src="gallery/tree.jpg" alt="">
     <img src="gallery/fairplace.jpg" alt="">
     <img src="gallery/кукла.jpg" alt="">
     <img src="gallery/градина.jpeg" alt="">
