correct problem with banquet menu 1

--- a/gallery-page.html
+++ b/gallery-page.html
@@ -137,7 +137,7 @@
     <img src="gallery/манджа.jpg" alt="">
     <img src="gallery/торта-вишни.jpg" alt="">
     <img src="gallery/торта-шоколад.jpg" alt="">
-    <img src="gallery/торта-медовик.jpg" alt="">
+    <!-- <img src="gallery/торта-медовик.jpg" alt=""> -->
     <img src="gallery/панакота.jpg" alt="">
     <img src="gallery/рататуй.jpg" alt="">
   </div>
