--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </button>
                     <button onclick="setLanguage('en')">
                         <img src="https://flagcdn.com/w40/gb.png" alt="GB Flag" />
-                        EN
+                 llllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll       EN
                     </button>
                 </div>
             </nav>
